--- a/libraryVersions.yaml
+++ b/libraryVersions.yaml
@@ -1,5 +1,6 @@
 # Versions for modules that will be released as libraries
 idscp2: "0.4.5"
+idscp2ex: "0.4.5-ex"
 ktlint: "0.41.0"
 
 # Kotlin library/compiler version
